# gst-musicxml2midi

./: AUTHORS  README  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
samples/: .BrookeWestSample.xml.swp  c.xml  keysignature.xml  twovoices.xml
src/: .gstmusicxml2midi.c.swp  Makefile.am  gstmusicxml2midi.c  gstmusicxml2midi.h
